Add missing function dependencies

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
+    "gotrue-js": "^0.9.29",
     "jsonwebtoken": "^9.0.2",
+    "netlify-identity-widget": "^1.9.2",
     "uuid": "^11.1.0"
   }
 }
