--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,10 @@
   HUGO_VERSION = "0.111.3"
   HUGO_ENV = "production"
   HUGO_ENABLEGITINFO = "true"
+  # Auth0 variables will be set in Netlify dashboard for security
+  # AUTH0_DOMAIN = "your-auth0-domain.auth0.com"
+  # AUTH0_CLIENT_ID = "your-auth0-client-id"
+  # AUTH0_API_AUDIENCE = "https://api.webmastersguild.org"
 
 [context.deploy-preview]
   command = "hugo -b $DEPLOY_PRIME_URL"
